<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/txt_data"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/first_name"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/txt_first_name"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/last_name"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/last_name"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/email"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/txt_email"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/txt_password"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/hp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/txt_nohp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/gender"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/txt_gender"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/address"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/txt_address"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>